<resources>
    <string name="app_name">ProjectManager</string>

    // custom
    <string name="imageRadius">20dp</string>


    //button
    <string name="button_import_image">Import Image</string>
    <string name="button_cancel">cancel</string>
    <string name="button_return_x">X</string>
    <string name="button_delete">Delete</string>
    <string name="button_options">Options</string>
    <string name="button_add">+</string>
    <string name="button_import">Import</string>
    <string name="button_close">Close</string>


    // activities
    <string name="activity_change_image_header">Change Image</string>
    <string name="activity_change_image_new_image">New Image:</string>
    <string name="activity_change_image_set_image">Set Image</string>

    <string name="activity_change_text_edit">Edit:</string>
    <string name="activity_change_text_fillerText">Something</string>
    <string name="activity_change_text_set_new_text">Set new text</string>
    <string name="activity_change_text_change_text">Change Text</string>
    <string name="activity_change_text_type_here">Type Here</string>

    <string name="activity_delete_confirmation_delete_this_content">Delete this content?</string>
    <string name="activity_delete_confirmation_you_will_lose_the_selected_data">You will lose the selected data.</string>
    <string name="activity_delete_confirmation_are_you_sure">Are you sure?</string>

    <string name="activity_home_projects">Projects</string>
    <string name="activity_home_edit_projects">Edit projects</string>
    <string name="activity_home_edit_projects_edit">Edit projects</string>

    <string name="activity_new_project_create_new_project">Create new project</string>
    <string name="activity_new_project_project_name">Project name:</string>
    <string name="activity_new_project_type_name_here">Type name here</string>
    <string name="activity_new_project_create">Create</string>
    <string name="activity_new_project_add_image">Add image:</string>

    <string name="activity_project_return_home">Return home</string>
    <string name="activity_project_filler_project_cost">$ 12,000,000.00</string>
    <string name="activity_project_filler_project_name">Current Project name</string>

    <string name="activity_project_add_item_project_name">project name</string>
    <string name="activity_project_add_item_add_expense">Add Expense:</string>
    <string name="activity_project_add_item_expense_description">Expense Description:</string>
    <string name="activity_project_add_item_hint_type_here">type here</string>
    <string name="activity_project_add_item_hint_250">250</string>
    <string name="activity_project_add_item_cost">Cost:</string>
    <string name="activity_project_add_item_add_image">Add Image:</string>
    <string name="activity_project_add_item_add_to_project">Add to project</string>


    // unused activity main / search by
    <string name="activity_search_by_by_most_expensive">by most expensive</string>
    <string name="activity_search_by_other_sort_type">other sort type</string>
    <string name="activity_main_project_manager">Project Manager</string>
    <string name="activity_main_start">Start</string>

</resources>
